--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">About</h2>
                         <hr class="divider my-4" />
-                        <p class="mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
+                        <p class="text-black-75 mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                     <div class="col-lg-9 text-center">
                         <h2 class="mt-0">Contact us</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
+                        <p class="mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
                     </div>
                 </div>
                 <div class="text-center justify-content-center">
