--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
                         <hr class="divider my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
-                        <img src="assets/img/events/hackathon_prot.jfif" style="width: 80%; margin-bottom: 25px">
+                        <!-- <img src="assets/img/events/hackathon_prot.jfif" style="width: 80%; margin-bottom: 25px"> -->
+                        <h3>CBioVikings general assembly</h3>
+                        <h4>Wednesday 8 December</h4>
+                        <p>Interested in joining CBioVikings, got an idea to pitch or just want to learn more about us?
+                        Join our GA! Open to all.</p>
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="http://biohackathon.dk" target="_blank" class="btn btn-primary btn-md">Register now!</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfG-a6WcqBh7QEFD5BtbVWAGgxe7FS1rzlo5FoFBrr7LbIPfQ/viewform?usp=sf_link" target="_blank" class="btn btn-primary btn-md">Register your interest here</a>
                     </div>
                 </div>
             </div>
